--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "react-scroll-up-btn",
-  "version": "1.0.4",
-  "description": "A simple scroll up button built with react",
-  "main": "./lib/ScrollUpButton.js",
+  "name": "react-prime-motc-header",
+  "version": "0.0.1",
+  "main": "./lib/MOTCHeader.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/weianofsteel/react-scroll-up-button"
+    "url": "https://github.com/carie8655/react-prime-motc-header"
   },
   "keywords": [
     "react",
-    "scroll"
+    "primereact"
   ],
   "license": "MIT",
   "scripts": {
     "build": "webpack"
   },
-  "author": "Weian Wang",
+  "author": "Carie Yang",
   "bugs": {
-    "url": "https://github.com/weianofsteel/react-scroll-up-button"
+    "url": "https://github.com/carie8655/react-prime-motc-header"
   },
   "peerDependencies": {
     "prop-types": "^15.6.0",
@@ -30,7 +29,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^3.5.1",
+    "css-loader": "^3.6.0",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.0.0",
@@ -40,10 +39,11 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.1",
-    "@material-ui/icons": "^4.9.1",
+    "file-loader": "^6.2.0",
     "primeflex": "^3.1.0",
     "primeicons": "^4.1.0",
-    "primereact": "^7.0.0-rc.2"
+    "primereact": "^7.0.0-rc.2",
+    "react-transition-group": "^4.4.2",
+    "url-loader": "^4.1.1"
   }
 }
