--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   },
   "dependencies": {
     "file-loader": "^6.2.0",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0",
-    "primereact": "^6.5.1",
+    "primeflex": "3.1.3",
+    "primeicons": "5.0.0",
+    "primereact": "7.2.1",
     "react-transition-group": "^4.4.2",
     "url-loader": "^4.1.1"
   }
