--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-prime-motc-header",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "main": "./lib/MOTCHeader.js",
   "repository": {
     "type": "git",
@@ -39,6 +39,10 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "file-loader": "^6.2.0",
     "primeflex": "3.1.3",
     "primeicons": "5.0.0",
