--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-prime-motc-header",
-  "version": "0.1.0",
-  "main": "./lib/MOTCHeader.js",
+  "version": "0.1.1",
+  "main": "./lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/carie8655/react-prime-motc-header"
